# hdt-render

./: .gitignore  README.md  pyproject.toml
assets/live2d/chodenpa_student/: VT_student.model3.json
scripts/: make_test_wav.py
src/hdt_render/: cli.py  jobs.py  paths.py  renderer.py  server.py
tests/: test_jobs.py
